@@ -482,11 +482,12 @@ gfc_handle_runtime_check_option (const char *arg)
 {
   int result, pos = 0, n;
   static const char * const optname[] = { "all", "bounds", "array-temps",
-					  "recursion", "do", "pointer", NULL };
+					  "recursion", "do", "pointer",
+					  "mem", NULL };
   static const int optmask[] = { GFC_RTCHECK_ALL, GFC_RTCHECK_BOUNDS,
 				 GFC_RTCHECK_ARRAY_TEMPS,
 				 GFC_RTCHECK_RECURSION, GFC_RTCHECK_DO,
-				 GFC_RTCHECK_POINTER,
+				 GFC_RTCHECK_POINTER, GFC_RTCHECK_MEM,
 				 0 };
  
   while (*arg)
